--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Node.js - Express Framework Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/jimuelpalaca/nodex/issues"
   },
-  "homepage": "https://github.com/jimuelpalaca/nodex#readme"
+  "homepage": "https://github.com/jimuelpalaca/nodex#readme",
+  "devDependencies": {
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
