--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "nodex",
   "version": "1.0.0",
   "description": "A Node.js - Express Framework Boilerplate",
-  "main": "dist/index.js",
+  "main": "dist/app/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
+    "clean": "rimraf dist/*",
+    "copy-assets": "ts-node src/app/tools/copyStaticFiles",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean lint tsc copy-assets",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts,html --exec npm run dev:start",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,7 +35,16 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/fs-extra": "^8.1.0",
     "@types/node": "^13.13.0",
+    "@types/shelljs": "^0.8.7",
+    "@types/vhost": "^3.0.1",
+    "fs-extra": "^9.0.0",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.9.0",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
@@ -39,6 +52,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "vhost": "^3.0.2"
   }
 }
