--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "vhost": "^3.0.2"
   }
 }
