--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/fs-extra": "^8.1.0",
-    "@types/node": "^13.13.0",
+    "@types/node": "^13.13.4",
     "@types/shelljs": "^0.8.7",
     "@types/vhost": "^3.0.1",
     "fs-extra": "^9.0.0",
@@ -54,6 +54,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "mysql2": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.24",
     "vhost": "^3.0.2"
   }
 }
