Add typeorm configuration on .env - https://typeorm.io/#/using-ormconfig/using-environment-variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
-APP_NAME=
-APP_PORT=
+APP_NAME=nodex
+APP_PORT=8081
+
+TYPEORM_CONNECTION=mysql
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
+TYPEORM_PORT=3306
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_LOGGING=true
+TYPEORM_ENTITIES=dist/modules/**/domain/entity/*.js
+TYPEORM_MIGRATIONS=dist/database/migrations/*.js
+TYPEORM_MIGRATIONS_DIR=src/database/migrations
+TYPEORM_DRIVER_EXTRA='{"charset": "utf8mb4"}'
