--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "outDir": "dist",
     "baseUrl": "..",
     "allowJs": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "paths": {
       "*": ["node_modules/*"]
     }
