--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc copy-assets",
-    "dev:start": "npm-run-all build start",
+    "dev:start": "npm-run-all test build start",
     "dev": "nodemon --watch src -e ts,html --exec npm run dev:start",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register ./tests/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -32,18 +32,25 @@
   "homepage": "https://github.com/jimuelpalaca/nodex#readme",
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/fs-extra": "^8.1.0",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
     "@types/shelljs": "^0.8.7",
     "@types/vhost": "^3.0.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "fs-extra": "^9.0.0",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
+    "ts-mockito": "^2.5.0",
     "ts-node": "^8.9.0",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
